// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change icon class prefix when using icon-prefix prop 1`] = `
<button
  type="button"
  class="van-button van-button--primary van-button--large"
>
  <div class="van-button__content">
    <i class="van-badge__wrapper my-icon my-icon-success van-button__icon">
    </i>
  </div>
</button>
`;

exports[`should render extra slot when size is large 1`] = `
<button
  type="button"
  class="van-button van-button--primary van-button--large van-button--with-extra"
>
  <div class="van-button__content">
    <span class="van-button__text">
      Button
    </span>
  </div>
  <div class="van-button__extra">
    Extra Content
  </div>
</button>
`;

exports[`should render icon in the right side when setting icon-position to right 1`] = `
<button
  type="button"
  class="van-button van-button--primary van-button--large"
>
  <div class="van-button__content">
    <i class="van-badge__wrapper van-icon van-icon-plus van-button__icon">
    </i>
  </div>
</button>
`;

exports[`should render icon slot correctly 1`] = `
<button
  type="button"
  class="van-button van-button--primary van-button--large"
>
  <div class="van-button__content">
    <div class="van-button__icon">
      Custom Icon
    </div>
    <span class="van-button__text">
      Text
    </span>
  </div>
</button>
`;

exports[`should render loading slot correctly 1`] = `
<button
  type="button"
  class="van-button van-button--primary van-button--large van-button--loading"
>
  <div class="van-button__content">
    Custom Loading
  </div>
</button>
`;

exports[`should render plain text button with text-secondary correctly 1`] = `
<button
  type="button"
  class="van-button van-button--primary van-button--large van-button--plain van-button--text van-button--text-secondary"
>
  <div class="van-button__content">
    <span class="van-button__text">
      Secondary
    </span>
  </div>
</button>
`;

exports[`should render text button correctly 1`] = `
<button
  type="button"
  class="van-button van-button--primary van-button--large van-button--text"
>
  <div class="van-button__content">
    <i class="van-badge__wrapper van-icon van-icon-plus van-button__icon">
    </i>
    <span class="van-button__text">
      Text Button
    </span>
  </div>
</button>
`;
